...
    final TextEditingController controller = TextEditingController();

    return showDialog(
      context: context,
      builder: (context) => AlertDialog(
        title: Text(
          'Enter Password',
          style: theme.textTheme.bodyLarge?.copyWith(
            color: theme.colorScheme.inverseSurface,
            fontSize: 30,
          ),
        ),
        content: Column(
...
                  color: theme.colorScheme.secondary,
                ),
                prefixIcon: Icon(
                  Icons.password,
                  color: theme.colorScheme.secondary,
                ),
                labelText: 'Password',
              ),
              style: theme.textTheme.bodyLarge?.copyWith(
                color: theme.colorScheme.tertiary,
                fontWeight: FontWeight.bold,
              ),
            ),
...
                  ),
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(11),
                  ),
                ),
                child: Text(
                  'DELETE',
                  style: theme.textTheme.bodyLarge?.copyWith(
                    fontWeight: FontWeight.bold,
                    fontSize: 15,
                  ),
                ),
              ),
...
                    decelerationRate: ScrollDecelerationRate.fast,
                  ),
                  child: Column(
                    children: <Widget>[
                      if (allTags.isNotEmpty) ...[
                        Text(
                          'Tags:',
                          style: theme.textTheme.bodyLarge?.copyWith(
                            fontSize: 17,
                            color: theme.colorScheme.inverseSurface,
                            fontWeight: FontWeight.w900,
                          ),
                        ),
...
                      ),
                    ),
                    onPressed: () {
                      Navigator.of(context).pop();
                    },
                    child: Text(
                      'SELECT',
                      style: theme.textTheme.bodyLarge?.copyWith(
                        fontWeight: FontWeight.bold,
                        fontSize: 15,
                        color: theme.colorScheme.inverseSurface,
                      ),
                    ),
...
                          color: theme.colorScheme.secondary,
                        ),
                        onPressed: () async {
                          final result = await Navigator.push(
                            context,
                            MaterialPageRoute(
                              builder: (context) => const Settings(),
                            ),
                          );
                          if (result == true && mounted) {
                            setState(() {
                              cdb.loadData();
                            });
                          }
                        },
                      ),
                    ],
                    title: Text(
                      'Cardabase',
                      style: theme.textTheme.titleLarge?.copyWith(),
                    ),
                    centerTitle: true,
                    elevation: 0.0,
                    backgroundColor: theme.colorScheme.surface,
                    floating: true,
...
