...
          setState(() => didImport = true);
          if (mounted) {
            Navigator.of(context).pop(true);
          }
        }
      },
      settingHeader: 'Backup/Restore',
      settingIcon: Icons.import_export,
      iconColor: theme.colorScheme.tertiary,
      borderColor: theme.colorScheme.primary,
      showMore: true,
    );
  }

  Widget _deleteDatabaseButton(ThemeData theme) {
    return SettingTile(
      aboutSettingHeader: 'Remove all cards from the app',
      settingAction: () => showClearCardsDialog(),
      settingHeader: 'Delete Cardabase',
      settingIcon: Icons.delete_outline,
      iconColor: Colors.red,
      borderColor: Colors.red,
      textColor: Colors.red,
    );
  }
...
